# mlops-learning-content

./: README.md
day-01/: README.md
day-01/mlops_project_template/: README.md  pyproject.toml
day-05-and-06/: k8-implementation.md
